// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`9.4 DelegateRegistration > renders correctly in RTL direction 1`] = `
<div>
  <div
    dir="rtl"
  >
    <div
      class="rounded-lg border bg-card p-6 shadow-sm dark:border-border dark:bg-card"
    >
      <h2
        class="mb-4 text-lg font-semibold text-foreground dark:text-foreground"
      >
        registerTitle
      </h2>
      <div
        class="mb-4 rounded-md bg-green-50 px-4 py-3 text-sm text-green-800 dark:bg-green-900/20 dark:text-green-300"
      >
        consentLinked
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm font-medium text-foreground dark:text-muted-foreground"
          for="delegate-phone"
        >
          phone
        </label>
        <input
          class="mt-1 block w-full rounded-md border px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-ring disabled:opacity-50 dark:border-border dark:bg-muted"
          dir="ltr"
          id="delegate-phone"
          placeholder="phonePlaceholder"
          type="tel"
          value=""
        />
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm font-medium text-foreground dark:text-muted-foreground"
          for="delegate-relationship"
        >
          relationship
        </label>
        <select
          class="mt-1 block w-full rounded-md border px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-ring disabled:opacity-50 dark:border-border dark:bg-muted"
          id="delegate-relationship"
        >
          <option
            disabled=""
            value=""
          >
            —
          </option>
          <option
            value="spouse"
          >
            relationship.spouse
          </option>
          <option
            value="parent"
          >
            relationship.parent
          </option>
          <option
            value="child"
          >
            relationship.child
          </option>
          <option
            value="sibling"
          >
            relationship.sibling
          </option>
          <option
            value="grandchild"
          >
            relationship.grandchild
          </option>
          <option
            value="in-law"
          >
            relationship.inLaw
          </option>
          <option
            value="other"
          >
            relationship.other
          </option>
        </select>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-foreground dark:text-muted-foreground"
          for="delegate-name"
        >
          name
        </label>
        <input
          class="mt-1 block w-full rounded-md border px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-ring disabled:opacity-50 dark:border-border dark:bg-muted"
          id="delegate-name"
          placeholder="namePlaceholder"
          type="text"
          value=""
        />
      </div>
      <div
        class="flex justify-end gap-3"
      >
        <button
          class="rounded-md border px-4 py-2 text-sm hover:bg-muted/30 disabled:opacity-50 dark:border-border dark:hover:bg-muted"
          type="button"
        >
          cancel
        </button>
        <button
          class="rounded-md bg-primary px-4 py-2 text-sm font-medium text-white hover:bg-primary/90 disabled:opacity-50"
          type="button"
        >
          register
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`9.4+ DelegateManagementSection > renders section correctly in RTL direction (snapshot) 1`] = `
<div>
  <div
    dir="rtl"
  >
    <section
      aria-labelledby="delegates-section-title"
      class="mt-6"
    >
      <div
        class="flex items-center justify-between"
      >
        <h3
          class="text-base font-semibold text-foreground dark:text-foreground"
          id="delegates-section-title"
        >
          sectionTitle
        </h3>
      </div>
      <ul
        class="mt-4 space-y-2"
      >
        <li
          class="flex items-center justify-between rounded-lg border px-4 py-3 dark:border-border"
        >
          <div
            class="text-sm"
          >
            <span
              class="font-medium text-foreground dark:text-foreground"
            >
              relationship.spouse
            </span>
            <span
              class="ms-2 inline-flex items-center rounded-full bg-green-100 px-2 py-0.5 text-xs font-medium text-green-700 dark:bg-green-900/30 dark:text-green-400"
            >
              activeLabel
            </span>
            <p
              class="text-muted-foreground dark:text-muted-foreground"
            >
              Invalid Date
            </p>
          </div>
          <button
            class="rounded-md border border-red-300 px-3 py-1.5 text-sm text-red-600 hover:bg-red-50 dark:border-red-600 dark:text-red-400 dark:hover:bg-red-900/20"
            type="button"
          >
            revokeDelegate
          </button>
        </li>
      </ul>
    </section>
  </div>
</div>
`;

exports[`9.4+ DelegateManagementSection > renders section in LTR direction (snapshot) 1`] = `
<div>
  <div
    dir="ltr"
  >
    <section
      aria-labelledby="delegates-section-title"
      class="mt-6"
    >
      <div
        class="flex items-center justify-between"
      >
        <h3
          class="text-base font-semibold text-foreground dark:text-foreground"
          id="delegates-section-title"
        >
          sectionTitle
        </h3>
      </div>
      <ul
        class="mt-4 space-y-2"
      >
        <li
          class="flex items-center justify-between rounded-lg border px-4 py-3 dark:border-border"
        >
          <div
            class="text-sm"
          >
            <span
              class="font-medium text-foreground dark:text-foreground"
            >
              relationship.spouse
            </span>
            <span
              class="ms-2 inline-flex items-center rounded-full bg-green-100 px-2 py-0.5 text-xs font-medium text-green-700 dark:bg-green-900/30 dark:text-green-400"
            >
              activeLabel
            </span>
            <p
              class="text-muted-foreground dark:text-muted-foreground"
            >
              Invalid Date
            </p>
          </div>
          <button
            class="rounded-md border border-red-300 px-3 py-1.5 text-sm text-red-600 hover:bg-red-50 dark:border-red-600 dark:text-red-400 dark:hover:bg-red-900/20"
            type="button"
          >
            revokeDelegate
          </button>
        </li>
      </ul>
    </section>
  </div>
</div>
`;

exports[`9.5 RevokeDelegateDialog > renders correctly in RTL direction 1`] = `
<div>
  <div
    dir="rtl"
  >
    <div
      aria-labelledby="revoke-dialog-title"
      aria-modal="true"
      class="fixed inset-0 z-50 flex items-center justify-center bg-black/50"
      role="dialog"
    >
      <div
        class="mx-4 w-full max-w-md rounded-lg bg-card p-6 shadow-xl dark:bg-card"
      >
        <h2
          class="mb-4 text-lg font-semibold text-red-600 dark:text-red-400"
          id="revoke-dialog-title"
        >
          revokeDelegate
        </h2>
        <p
          class="mb-4 text-sm text-foreground dark:text-muted-foreground"
        >
          revokeConfirm
        </p>
        <label
          class="block text-sm font-medium text-foreground dark:text-muted-foreground"
        >
          revokeReason
          <textarea
            class="mt-1 block w-full rounded-md border px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-red-500 disabled:opacity-50 dark:border-border dark:bg-muted"
            placeholder="revokeReasonPlaceholder"
            rows="3"
          />
        </label>
        <div
          class="mt-6 flex justify-end gap-3"
        >
          <button
            class="rounded-md border px-4 py-2 text-sm hover:bg-muted/30 disabled:opacity-50 dark:border-border dark:hover:bg-muted"
            type="button"
          >
            cancel
          </button>
          <button
            class="rounded-md bg-red-600 px-4 py-2 text-sm font-medium text-white hover:bg-red-700 disabled:opacity-50"
            type="button"
          >
            revokeSubmit
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
